--- a/admin.html
+++ b/admin.html
@@ -26,6 +26,7 @@
           </div>
           <div>
             <h1 class="font-bold text-gray-900 text-lg leading-tight">Guilda e eventos</h1>
+          <p id="vip-label" class="mt-1 text-xs text-gray-500">Guilda: <span class="font-bold text-gray-800">free</span></p>
             <p class="text-xs text-gray-400">Painel</p>
           </div>
         </div>
@@ -90,7 +91,7 @@
             <div class="flex justify-between items-center mb-4">
               <h3 class="font-bold text-gray-900 flex items-center gap-2">
                 <i data-lucide="crown" class="w-5 h-5 text-yellow-500"></i>
-                Administradores
+                Administradores <span class="ml-2 inline-flex items-center rounded-full bg-emerald-50 text-emerald-700 ring-1 ring-emerald-200 px-2 py-0.5 text-[10px] font-extrabold">PLUS</span>
               </h3>
               <button id="btn-add-admin" class="text-xs bg-emerald-100 text-emerald-700 px-3 py-1 rounded-lg font-bold hover:bg-emerald-200">Adicionar</button>
             </div>
@@ -107,7 +108,7 @@
             <div class="flex justify-between items-center mb-4">
               <h3 class="font-bold text-gray-900 flex items-center gap-2">
                 <i data-lucide="medal" class="w-5 h-5 text-blue-500"></i>
-                Líderes
+                Líderes <span class="ml-2 inline-flex items-center rounded-full bg-emerald-50 text-emerald-700 ring-1 ring-emerald-200 px-2 py-0.5 text-[10px] font-extrabold">PLUS</span>
               </h3>
               <button id="btn-add-leader" class="text-xs bg-emerald-100 text-emerald-700 px-3 py-1 rounded-lg font-bold hover:bg-emerald-200">Adicionar</button>
             </div>
@@ -126,7 +127,7 @@
             <div class="flex justify-between items-center mb-4">
               <h3 class="font-bold text-gray-900 flex items-center gap-2">
                 <i data-lucide="gamepad-2" class="w-5 h-5 text-emerald-600"></i>
-                Acesso do Jogador (BETA)
+                Acesso do Jogador <span class="ml-2 inline-flex items-center rounded-full bg-purple-50 text-purple-700 ring-1 ring-purple-200 px-2 py-0.5 text-[10px] font-extrabold">PRO</span><span class="ml-2 inline-flex items-center rounded-full bg-gray-100 text-gray-600 ring-1 ring-gray-200 px-2 py-0.5 text-[10px] font-extrabold">BETA</span> <span class="ml-2 inline-flex items-center rounded-full bg-purple-50 text-purple-700 ring-1 ring-purple-200 px-2 py-0.5 text-[10px] font-extrabold">PRO</span><span class="ml-2 inline-flex items-center rounded-full bg-gray-100 text-gray-600 ring-1 ring-gray-200 px-2 py-0.5 text-[10px] font-extrabold">BETA</span>
               </h3>
             </div>
 
@@ -209,6 +210,39 @@
     // Inicializa interface (menu mobile + ícones)
     setupSidebar();
     initIcons();
+
+    // VIP gating (free | plus | pro)
+    function tierRank(t){
+      const s = (t||'free').toString().toLowerCase();
+      if (s==='pro') return 2;
+      if (s==='plus') return 1;
+      return 0;
+    }
+    function applyVipUI(tier){
+      const vipLabel = document.getElementById('vip-label');
+      if (vipLabel) vipLabel.innerHTML = `Guilda: <span class="font-bold text-gray-800">${tier}</span>`;
+
+      // PLUS: adicionar admins/líderes
+      const needPlus = tierRank(tier) >= 1;
+      for (const id of ['btn-add-admin','btn-add-leader']){
+        const b = document.getElementById(id);
+        if (!b) continue;
+        if (!needPlus){
+          b.disabled = true;
+          b.classList.add('opacity-50','cursor-not-allowed');
+          b.title = 'Recurso PLUS';
+        }
+      }
+
+      // PRO (BETA): acesso jogador fica bloqueado para todos
+      for (const id of ['btn-create-player-disabled-beta','btn-create-player','btn-grant-player','btn-revoke-player','btn-delete-player']){
+        const b = document.getElementById(id);
+        if (!b) continue;
+        b.disabled = true;
+        b.classList.add('opacity-50','cursor-not-allowed');
+        b.title = 'BETA (bloqueado)';
+      }
+    }
     document.getElementById('player-email')?.addEventListener('input', (e) => {
       const v = (e.target?.value || '').trim().toLowerCase();
       const p = document.getElementById('player-email-preview');
@@ -255,6 +289,13 @@
     // Verifica login e carrega dados
     checkAuth().then(async (user) => {
       if(!user) return;
+
+      // aplica VIP imediatamente (cache ou depois do auth)
+      try {
+        const ctx0 = getGuildContext();
+        const tier0 = (ctx0?.vipTier || JSON.parse(localStorage.getItem('guildCtx_cache_v1')||'{}').vipTier || 'free');
+        applyVipUI(String(tier0));
+      } catch (_) {}
 
       // garante email atual (caso cache esteja vazio)
       try {
