--- a/lines.html
+++ b/lines.html
@@ -81,7 +81,7 @@
             </div>
           </div>
 
-          <button id="btn-new-line" onclick="openLineModal()" class="flex items-center gap-2 px-4 py-2.5 bg-gradient-to-r from-emerald-500 to-green-600 text-white rounded-xl text-sm font-medium shadow-lg shadow-emerald-200 hover:shadow-xl hover:shadow-emerald-200 transition-all active:scale-95">
+          <button id="btn-new-line" title="Recurso PRO" onclick="openLineModal()" class="flex items-center gap-2 px-4 py-2.5 bg-gradient-to-r from-emerald-500 to-green-600 text-white rounded-xl text-sm font-medium shadow-lg shadow-emerald-200 hover:shadow-xl hover:shadow-emerald-200 transition-all active:scale-95">
             <i data-lucide="plus" class="w-4 h-4"></i> <span class="hidden sm:inline">Adicionar</span>
           </button>
         </div>
@@ -172,6 +172,20 @@
 
     setupSidebar();
     initIcons();
+
+    function tierRank(t){
+      const s=(t||'free').toString().toLowerCase();
+      if(s==='pro') return 2; if(s==='plus') return 1; return 0;
+    }
+    function applyVip(tier){
+      const pro = tierRank(tier) >= 2;
+      const b = document.getElementById('btn-new-line');
+      if(b && !pro){
+        b.disabled = true;
+        b.classList.add('opacity-50','cursor-not-allowed');
+        b.textContent = 'Novo (PRO)';
+      }
+    }
 
     // ---- Estado ------------------------------------------------------------
     let guildId = null;
