--- a/lines.html
+++ b/lines.html
@@ -173,20 +173,58 @@
     setupSidebar();
     initIcons();
 
+    // VIP gating (sem piscar): Lines exige PLUS
+    let __vipTier = 'free';
+    try {
+      const ctx0 = getGuildContext();
+      const tier0 = (ctx0?.vipTier || JSON.parse(localStorage.getItem('guildCtx_cache_v1')||'{}').vipTier || 'free');
+      __vipTier = String(tier0);
+      applyVip(__vipTier);
+    } catch(_) {}
+
+
     function tierRank(t){
       const s=(t||'free').toString().toLowerCase();
       if(s==='pro') return 2; if(s==='plus') return 1; return 0;
     }
     function applyVip(tier){
       const rank = tierRank(tier);
-      const badge = document.getElementById('plus-badge-lines');
+      const isPlus = rank >= 1;
 
-      // FREE = mostra tag PLUS
+      // Badge "PLUS" (aparece só no FREE)
+      const badge = document.getElementById('plus-badge-lines');
       if(rank === 0){
         if(badge) badge.classList.remove('hidden');
       } else {
         if(badge) badge.classList.add('hidden');
       }
+
+      // Lock/unlock botões (igual o camp, mas aqui é PLUS)
+      const lockify = (btn, lockedHtml) => {
+        if(!btn) return;
+        if(!btn.dataset.originalHtml) btn.dataset.originalHtml = btn.innerHTML;
+
+        if(!isPlus){
+          btn.disabled = true;
+          btn.classList.add('opacity-50','cursor-not-allowed');
+          btn.innerHTML = lockedHtml;
+        } else {
+          btn.disabled = false;
+          btn.classList.remove('opacity-50','cursor-not-allowed');
+          btn.innerHTML = btn.dataset.originalHtml;
+        }
+      };
+
+      const bNew  = document.getElementById('btn-new-line');
+      const bSave = document.getElementById('btn-save-line');
+
+      lockify(bNew,  '<i data-lucide="lock" class="w-4 h-4"></i> PLUS');
+      lockify(bSave, '<i data-lucide="lock" class="w-4 h-4"></i> PLUS');
+
+      // Re-render dos ícones
+      initIcons();
+    }
+
     }
 
     // ---- Estado ------------------------------------------------------------
@@ -430,6 +468,12 @@
         if (!guildId) {
           const c = getGuildContext();
           if (c?.guildId) guildId = c.guildId;
+      // Atualiza gating após auth/context
+      try {
+        const tier1 = (c?.vipTier || JSON.parse(localStorage.getItem('guildCtx_cache_v1')||'{}').vipTier || 'free');
+        __vipTier = String(tier1);
+        applyVip(__vipTier);
+      } catch(_) {}
         }
         if (!guildId) return;
 
@@ -561,6 +605,15 @@
 
     window.saveLine = async () => {
       if (!guildId) { showToast('info','Carregando sua guilda...'); return; }
+      // Recurso PLUS (bloqueia bypass via console)
+      try {
+        const c0 = getGuildContext();
+        const tier = (c0?.vipTier || __vipTier || JSON.parse(localStorage.getItem('guildCtx_cache_v1')||'{}').vipTier || 'free');
+        if (tierRank(tier) < 1) {
+          showToast('info', 'Recurso PLUS. Faça upgrade para liberar Lines.');
+          return;
+        }
+      } catch(_) {}
       try {
         if (!guildId) {
           const c = getGuildContext();
