--- a/admin.html
+++ b/admin.html
@@ -215,8 +215,8 @@
 
     // VIP gating (free | plus | pro)
     function tierRank(t){
-      const s = (t||'free').toString().toLowerCase();
-      if (s==='pro') return 2;
+      const s = (t||'free').toString().toLowerCase().trim();
+      if (s==='pro' || s==='business') return 2;
       if (s==='plus') return 1;
       return 0;
     }
