--- a/camp.html
+++ b/camp.html
@@ -116,7 +116,7 @@
   </div>
 
   <script type="module">
-    import { checkAuth, setupSidebar, initIcons, logout, getGuildContext, showToast } from './logic.js';
+    import { checkAuth, setupSidebar, initIcons, logout, getGuildContext, showToast, checkIsCeo, ensureCeoNavLink, getVipTier } from './logic.js';
 
     // Inicialização IMEDIATA (Sem piscar)
     setupSidebar();
