--- a/upgrade.html
+++ b/upgrade.html
@@ -143,7 +143,7 @@
   </div>
 
 <script type="module">
-  import { checkAuth, setupSidebar, initIcons, logout, getVipTier } from './logic.js';
+  import { checkAuth, setupSidebar, initIcons, logout, getVipTier, checkIsCeo, ensureCeoNavLink } from './logic.js';
 
   setupSidebar();
   initIcons();
