--- a/upgrade.html
+++ b/upgrade.html
@@ -143,7 +143,7 @@
   </div>
 
 <script type="module">
-  import { checkAuth, setupSidebar, initIcons, logout, getVipTier, checkIsCeo, ensureCeoNavLink } from './logic.js';
+  import { checkAuth, setupSidebar, initIcons, logout, getVipTier, showToast, createUpgradeSolicitacao } from './logic.js';
 
   setupSidebar();
   initIcons();
@@ -246,13 +246,193 @@
   }
 
   
-  // Solicitar upgrade (salva no localStorage para não depender de rede)
-  window.requestUpgrade = async (planId) => {
-    const tier = (planId || 'free').toString().toUpperCase();
-    const msg = `Quero solicitar o plano ${tier} para minha guilda.`;
-    try { localStorage.setItem('upgrade_request_plan_v1', tier); } catch (_) {}
-    try { await navigator.clipboard.writeText(msg); } catch (_) {}
-    alert(msg + "\n\n(Copiado, se o navegador permitir)");
+  // PIX Copia e Cola por plano
+  const PIX_BY_PLAN = {
+    plus: '00020126580014br.gov.bcb.pix0136da7134dc-eb07-4189-a126-3e0d3e91fa5752040000530398654045.995802BR5912Kelvin Ortiz6009Sao Paulo62230519daqr812717438068787630483C7',
+    pro: '00020126580014br.gov.bcb.pix0136da7134dc-eb07-4189-a126-3e0d3e91fa5752040000530398654048.995802BR5912Kelvin Ortiz6009Sao Paulo62230519daqr812717438571777630418D2',
+    business: '00020126580014br.gov.bcb.pix0136da7134dc-eb07-4189-a126-3e0d3e91fa57520400005303986540561.995802BR5912Kelvin Ortiz6009Sao Paulo62230519daqr81271743863109463048B21'
+  };
+
+  function ensureModalRoot() {
+    let root = document.getElementById('upgrade-modal-root');
+    if (root) return root;
+    root = document.createElement('div');
+    root.id = 'upgrade-modal-root';
+    document.body.appendChild(root);
+    return root;
+  }
+
+  function closeModals() {
+    const root = document.getElementById('upgrade-modal-root');
+    if (root) root.innerHTML = '';
+  }
+
+  function modalShell(innerHtml) {
+    return `
+      <div class="fixed inset-0 z-[9999]">
+        <div class="absolute inset-0 bg-black/40" data-close="1"></div>
+        <div class="absolute inset-0 flex items-end sm:items-center justify-center p-4">
+          <div class="w-full max-w-lg bg-white rounded-2xl shadow-xl border border-gray-200 overflow-hidden">
+            ${innerHtml}
+          </div>
+        </div>
+      </div>
+    `;
+  }
+
+  function openPixModal(planId) {
+    const plan = (planId || '').toString().toLowerCase().trim();
+    const pix = PIX_BY_PLAN[plan];
+    if (!pix) {
+      showToast('error', 'Plano inválido para pagamento.');
+      return;
+    }
+
+    const planLabel = plan.toUpperCase();
+
+    const root = ensureModalRoot();
+    root.innerHTML = modalShell(`
+      <div class="p-4 border-b border-gray-100 flex items-center justify-between gap-3">
+        <div>
+          <div class="text-sm font-extrabold text-gray-900">Pagamento via PIX — ${planLabel}</div>
+          <div class="text-xs text-gray-500 mt-0.5">Copie o código abaixo e pague no seu banco.</div>
+        </div>
+        <button class="p-2 rounded-lg hover:bg-gray-50 text-gray-500" data-close="1" title="Fechar">
+          <i data-lucide="x" class="w-5 h-5"></i>
+        </button>
+      </div>
+
+      <div class="p-4">
+        <label class="text-xs font-bold text-gray-600">PIX Copia e Cola</label>
+        <textarea id="pix-code" class="mt-2 w-full h-28 rounded-xl border border-gray-200 bg-gray-50 p-3 text-xs text-gray-800 focus:outline-none focus:ring-2 focus:ring-emerald-200" readonly></textarea>
+
+        <div class="mt-3 flex flex-col sm:flex-row gap-2">
+          <button id="btn-copy-pix" class="w-full sm:w-auto inline-flex items-center justify-center gap-2 px-4 py-2 rounded-xl bg-gray-900 text-white text-sm font-bold hover:bg-black transition">
+            <i data-lucide="copy" class="w-4 h-4"></i> Copiar código
+          </button>
+          <button id="btn-already-paid" class="w-full sm:flex-1 inline-flex items-center justify-center gap-2 px-4 py-2 rounded-xl bg-emerald-600 text-white text-sm font-extrabold hover:bg-emerald-700 transition">
+            <i data-lucide="badge-check" class="w-4 h-4"></i> Já paguei
+          </button>
+        </div>
+
+        <div class="mt-3 text-[11px] text-gray-500 leading-relaxed">
+          Importante: o nome informado em <b>“Já paguei”</b> deve ser o mesmo nome do titular da conta bancária que fez o pagamento.
+        </div>
+      </div>
+    `);
+
+    const ta = root.querySelector('#pix-code');
+    if (ta) ta.value = pix;
+
+    root.querySelectorAll('[data-close="1"]').forEach(el => {
+      el.addEventListener('click', closeModals);
+    });
+
+    const btnCopy = root.querySelector('#btn-copy-pix');
+    if (btnCopy) {
+      btnCopy.addEventListener('click', async () => {
+        try {
+          await navigator.clipboard.writeText(pix);
+          showToast('success', 'Código PIX copiado.');
+        } catch {
+          // fallback: seleciona o texto
+          try {
+            ta.focus();
+            ta.select();
+            document.execCommand('copy');
+            showToast('success', 'Código PIX copiado.');
+          } catch {
+            showToast('error', 'Não foi possível copiar automaticamente. Selecione e copie manualmente.');
+          }
+        }
+      });
+    }
+
+    const btnPaid = root.querySelector('#btn-already-paid');
+    if (btnPaid) {
+      btnPaid.addEventListener('click', () => openPaidModal(plan));
+    }
+
+    try { lucide.createIcons(); } catch (_) {}
+  }
+
+  function openPaidModal(planId) {
+    const plan = (planId || '').toString().toLowerCase().trim();
+    if (!PIX_BY_PLAN[plan]) {
+      showToast('error', 'Plano inválido.');
+      return;
+    }
+
+    const root = ensureModalRoot();
+    root.innerHTML = modalShell(`
+      <div class="p-4 border-b border-gray-100 flex items-center justify-between gap-3">
+        <div>
+          <div class="text-sm font-extrabold text-gray-900">Confirmar pagamento — ${plan.toUpperCase()}</div>
+          <div class="text-xs text-gray-500 mt-0.5">Informe o nome do titular que pagou o PIX.</div>
+        </div>
+        <button class="p-2 rounded-lg hover:bg-gray-50 text-gray-500" data-close="1" title="Fechar">
+          <i data-lucide="x" class="w-5 h-5"></i>
+        </button>
+      </div>
+
+      <div class="p-4">
+        <label class="text-xs font-bold text-gray-600">Nome real do pagador</label>
+        <input id="payer-name" class="mt-2 w-full rounded-xl border border-gray-200 bg-white px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-emerald-200" placeholder="Ex: João da Silva" />
+
+        <div class="mt-3 flex flex-col sm:flex-row gap-2">
+          <button id="btn-back" class="w-full sm:w-auto inline-flex items-center justify-center gap-2 px-4 py-2 rounded-xl bg-gray-100 text-gray-700 text-sm font-bold hover:bg-gray-200 transition">
+            <i data-lucide="arrow-left" class="w-4 h-4"></i> Voltar
+          </button>
+          <button id="btn-send" class="w-full sm:flex-1 inline-flex items-center justify-center gap-2 px-4 py-2 rounded-xl bg-emerald-600 text-white text-sm font-extrabold hover:bg-emerald-700 transition">
+            <i data-lucide="send" class="w-4 h-4"></i> Enviar solicitação
+          </button>
+        </div>
+
+        <div class="mt-3 text-[11px] text-gray-500 leading-relaxed">
+          Ao enviar, a solicitação será registrada e analisada. A ativação costuma ocorrer entre <b>30 min</b> e <b>5 horas</b>.
+        </div>
+      </div>
+    `);
+
+    root.querySelectorAll('[data-close="1"]').forEach(el => el.addEventListener('click', closeModals));
+
+    const inp = root.querySelector('#payer-name');
+    const btnBack = root.querySelector('#btn-back');
+    const btnSend = root.querySelector('#btn-send');
+
+    if (btnBack) btnBack.addEventListener('click', () => openPixModal(plan));
+
+    if (btnSend) {
+      btnSend.addEventListener('click', async () => {
+        const name = (inp?.value || '').toString().trim();
+        if (!name) {
+          showToast('error', 'Informe o nome real do pagador.');
+          inp?.focus();
+          return;
+        }
+
+        btnSend.disabled = true;
+        btnSend.classList.add('opacity-70');
+
+        try {
+          await createUpgradeSolicitacao(plan, name);
+          showToast('success', 'Solicitação enviada. Em breve seu plano será ativado.');
+          closeModals();
+        } catch (e) {
+          showToast('error', (e && e.message) ? e.message : 'Não foi possível enviar a solicitação.');
+          btnSend.disabled = false;
+          btnSend.classList.remove('opacity-70');
+        }
+      });
+    }
+
+    try { lucide.createIcons(); } catch (_) {}
+    inp?.focus();
+  }
+
+  // Solicitar upgrade (abre modal do PIX)
+  window.requestUpgrade = (planId) => {
+    openPixModal(planId);
   };
 
 function render(){
